--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         [class*=" icon-"] {
             /* use !important to prevent issues with browser extensions that change fonts */
             font-family: 'icomoon' !important;
+            speak: none;
             font-style: normal;
             font-weight: normal;
             font-variant: normal;
@@ -1148,7 +1149,7 @@
             border-radius: 3px;
             bottom: 0;
             width: 100%;
-            -webkit-transitions: height 1s ease;
+            -webkit-transition: height 1s ease;
         }
         
         .skill-level .skill-progress.beginner {
@@ -1250,7 +1251,7 @@
                 <div class="card profile-card"><span class="profile-pic-container">
             <div class="profile-pic"><img class="media-object img-circle center-block" data-src="holder.js/100x100"
                 alt="Toan Nguyen"
-                src="https://avatars.githubusercontent.com/u/65282760?v=4"
+                src="https://s.gravatar.com/avatar/dece97d111d62bbacb244ea6a9163b60?s=100&amp;r=pg&amp;d=mm"
                 itemprop="image" /></div>
             <div class="name-and-profession text-center">
               <h3 itemprop="name"><b>Toan Nguyen</b></h3>
@@ -1445,6 +1446,10 @@
                                 <h4 class="title text-uppercase">Interests</h4>
                                 <div class="content">
                                     <ul class="list-unstyled clear-margin">
+                                        <li class="card card-nested">
+                                            <p><strong>Head First Series</strong></p>
+                                            <div class="space-top labels"><span class="label label-keyword">Java</span><span class="label label-keyword">Object-Oriented Analysis &amp; Design</span></div>
+                                        </li>
                                         <li class="card card-nested">
                                             <p><strong>Sports</strong></p>
                                             <div class="space-top labels"><span class="label label-keyword">Running</span><span class="label label-keyword">Home-work-out</span><span class="label label-keyword">Swimming</span></div>
