--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         [class*=" icon-"] {
             /* use !important to prevent issues with browser extensions that change fonts */
             font-family: 'icomoon' !important;
-            speak: none;
+            speak-as: none;
             font-style: normal;
             font-weight: normal;
             font-variant: normal;
@@ -1149,7 +1149,7 @@
             border-radius: 3px;
             bottom: 0;
             width: 100%;
-            -webkit-transition: height 1s ease;
+            -webkit-transitions: height 1s ease;
         }
         
         .skill-level .skill-progress.beginner {
