--- a/index.html
+++ b/index.html
@@ -1247,11 +1247,10 @@
                 </ul>
             </nav>
             <section class="col-md-3 card-wrapper profile-card-wrapper affix">
-                <div class="card profile-card"><span class="profile-pic-container">
+                <div class="card profile-card">
+                    <span class="profile-pic-container">
             <div class="profile-pic"><img class="media-object img-circle center-block" data-src="holder.js/100x100"
-                alt="Toan Nguyen"
-                src="https://avatars.githubusercontent.com/u/65282760?v=4"
-                itemprop="image" /></div>
+                alt="Toan Nguyen" src="https://avatars.githubusercontent.com/u/65282760?v=4" itemprop="image" /></div>
             <div class="name-and-profession text-center">
               <h3 itemprop="name"><b>Toan Nguyen</b></h3>
               <h5 class="text-muted" itemprop="jobTitle">Software Development Student</h5>
