--- a/index.html
+++ b/index.html
@@ -1247,10 +1247,11 @@
                 </ul>
             </nav>
             <section class="col-md-3 card-wrapper profile-card-wrapper affix">
-                <div class="card profile-card">
-                    <span class="profile-pic-container">
+                <div class="card profile-card"><span class="profile-pic-container">
             <div class="profile-pic"><img class="media-object img-circle center-block" data-src="holder.js/100x100"
-                alt="Toan Nguyen" src="https://avatars.githubusercontent.com/u/65282760?v=4" itemprop="image" /></div>
+                alt="Toan Nguyen"
+                src="https://avatars.githubusercontent.com/u/65282760?v=4"
+                itemprop="image" /></div>
             <div class="name-and-profession text-center">
               <h3 itemprop="name"><b>Toan Nguyen</b></h3>
               <h5 class="text-muted" itemprop="jobTitle">Software Development Student</h5>
@@ -1287,7 +1288,8 @@
                                 <h4 class="title text-uppercase">About</h4>
                                 <div class="card card-nested">
                                     <div class="content mop-wrapper" itemprop="description">
-                                        <p>I am now a software development student at FPT-Aptech Academy.</p>
+                                        <p>👋 Hi, I'm Toán, a software development student.<br> 🌱 I'm currently taking ACCP (Aptech Certified Computer Professional) Course at FPT-Aptech Academy - Alliance with FPT Education.<br> 📫 I'm interested in learning
+                                            new things as well as being a problem solver and strong communicator eager to prove my value and talent.</p>
                                     </div>
                                 </div>
                             </div>
