update resume projects

--- a/index.html
+++ b/index.html
@@ -1288,8 +1288,8 @@
                                 <h4 class="title text-uppercase">About</h4>
                                 <div class="card card-nested">
                                     <div class="content mop-wrapper" itemprop="description">
-                                        <p>👋 Hi, I'm Toán, a software development student.<br> 🌱 I'm currently taking ACCP (Aptech Certified Computer Professional) Course at FPT-Aptech Academy - Alliance with FPT Education.<br> 📫 I'm interested in learning
-                                            new things as well as being a problem solver and strong communicator eager to prove my value and talent.</p>
+                                        <p>👋🏻 Hi, I'm Toán, a software development student.<br> 🕮 I'm currently taking ACCP (Aptech Certified Computer Professional) Course at FPT-Aptech Academy - Alliance with FPT Education.<br> 🌱 I'm dedicated to learning
+                                            better ways to develop clean, efficient, scalable, and reusable code as well as being a problem solver to grow and enhance my technical abilities.</p>
                                     </div>
                                 </div>
                             </div>
@@ -1320,18 +1320,45 @@
                                 <ul class="list-unstyled clear-margin">
                                     <li class="card card-nested clearfix">
                                         <div class="content">
-                                            <p class="clear-margin relative"><a href="https://maaguaete.github.io/2109.E0-eProject-Group_5" target="_blank"><strong>Prime Fitness</strong></a></p>
-                                            <p class="text-muted"><small><span class="space-right">Nov, 2021 - Dec, 2021</span><span><i
+                                            <p class="clear-margin relative"><a href="https://github.com/Maaguaete/airfpt" target="_blank"><strong>Air Fpt</strong></a></p>
+                                            <p class="text-muted"><small><span class="space-right">Jun, 2022 - Jul, 2022</span><span><i
                               class="icon-clock mr-5"></i>1 month</span></small></p>
-                                            <div class="mop-wrapper space-bottom"></div>
+                                            <div class="mop-wrapper space-bottom">
+                                                <p>The final semester project simulates an online ticket booking and check-in web app. Passengers can book and check in for family's or ones' individual purpose.</p>
+                                            </div>
+                                            <ul>
+                                                <li class="mop-wrapper">
+                                                    <p>Analysis and design the database structure.</p>
+                                                </li>
+                                                <li class="mop-wrapper">
+                                                    <p>Build the homepage layouts, the form and process for booking ticket.</p>
+                                                </li>
+                                                <li class="mop-wrapper">
+                                                    <p>Create the admin layouts through laravel framework.</p>
+                                                </li>
+                                                <li class="mop-wrapper">
+                                                    <p>Arrange tasks to team members, set time duration for each phrase of the project.</p>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </li>
                                     <li class="card card-nested clearfix">
                                         <div class="content">
-                                            <p class="clear-margin relative"><a href="https://github.com/Maaguaete/airfpt" target="_blank"><strong>Air Fpt</strong></a></p>
-                                            <p class="text-muted"><small><span class="space-right">Jun, 2022 - Jul, 2022</span><span><i
+                                            <p class="clear-margin relative"><a href="https://maaguaete.github.io/2109.E0-eProject-Group_5" target="_blank"><strong>Prime Fitness</strong></a></p>
+                                            <p class="text-muted"><small><span class="space-right">Nov, 2021 - Dec, 2021</span><span><i
                               class="icon-clock mr-5"></i>1 month</span></small></p>
-                                            <div class="mop-wrapper space-bottom"></div>
+                                            <div class="mop-wrapper space-bottom">
+                                                <p>The e-project for 1st Semester in FPT-Aptech academy that covered knowledge about HTML, CSS, Javascript, Bootstrap, jQuery and AngularJS as well.</p>
+                                            </div>
+                                            <ul>
+                                                <li class="mop-wrapper">
+                                                    <p>Arrange tasks to team members, set time duration for each phrase of the project (as a team leader).
+                                                    </p>
+                                                </li>
+                                                <li class="mop-wrapper">
+                                                    <p>Design UI/UX and build the front-end of this website.</p>
+                                                </li>
+                                            </ul>
                                         </div>
                                     </li>
                                 </ul>
@@ -1355,6 +1382,17 @@
                                             </div>
                                         </li>
                                         <li class="card card-nested card-skills">
+                                            <div class="skill-info"><strong>Back-end</strong>
+                                                <div class="space-top labels"><span class="label label-keyword">
+                            <p>Java</p>
+                          </span><span class="label label-keyword">
+                            <p>C#</p>
+                          </span><span class="label label-keyword">
+                            <p>Php</p>
+                          </span></div>
+                                            </div>
+                                        </li>
+                                        <li class="card card-nested card-skills">
                                             <div class="skill-info"><strong>DBMS</strong>
                                                 <div class="space-top labels"><span class="label label-keyword">
                             <p>MySQL</p>
@@ -1364,15 +1402,26 @@
                                             </div>
                                         </li>
                                         <li class="card card-nested card-skills">
-                                            <div class="skill-info"><strong>Back-end</strong>
+                                            <div class="skill-info"><strong>Framework</strong>
                                                 <div class="space-top labels"><span class="label label-keyword">
-                            <p>Java</p>
-                          </span><span class="label label-keyword">
                             <p>.Net</p>
                           </span><span class="label label-keyword">
-                            <p>Php</p>
+                            <p>Laravel</p>
                           </span><span class="label label-keyword">
-                            <p>Laravel Fwk</p>
+                            <p>Nodejs</p>
+                          </span><span class="label label-keyword">
+                            <p>AngularJS</p>
+                          </span></div>
+                                            </div>
+                                        </li>
+                                        <li class="card card-nested card-skills">
+                                            <div class="skill-info"><strong>Tools</strong>
+                                                <div class="space-top labels"><span class="label label-keyword">
+                            <p>jQuery</p>
+                          </span><span class="label label-keyword">
+                            <p>Git</p>
+                          </span><span class="label label-keyword">
+                            <p>Xampp</p>
                           </span></div>
                                             </div>
                                         </li>
@@ -1431,7 +1480,7 @@
                           </strong>,&nbsp;FPT-Aptech Academy</p>
                                                 <p class="text-muted"><small>Awarded on: May 25, 2022</small></p>
                                                 <div class="mop-wrapper">
-                                                    <p>Top 1 students in the Spring semester of FPT Academy in Ho Chi Minh</p>
+                                                    <p>Top Excellent Students in the Spring Semester of FPT Academy in HCM</p>
                                                 </div>
                                             </div>
                                         </li>
